--- a/src/CidadeSemlimites.Api/CidadeSemlimites.Api.csproj
+++ b/src/CidadeSemlimites.Api/CidadeSemlimites.Api.csproj
@@ -7,17 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CidadeSemLimites.Application\CidadeSemLimites.Application.csproj" />
     <ProjectReference Include="..\CidadeSemLimites.Communitcation\CidadeSemLimites.Communitcation.csproj" />
     <ProjectReference Include="..\CidadeSemLimites.Exception\CidadeSemLimites.Exception.csproj" />
+    <ProjectReference Include="..\CidadeSemLimites.Infrastructure\CidadeSemLimites.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
