--- a/src/CidadeSemlimites.Api/appsettings.Development.json
+++ b/src/CidadeSemlimites.Api/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "Connection": "Server=BANDEIRA,1434;Database=BD046730;User=RA046730;Password=046730;TrustServerCertificate=True"
   }
 }
