Adicionando endpoint adicionar Post

--- a/src/CidadeSemLimites.Exception/CidadeSemLimites.Exception.csproj
+++ b/src/CidadeSemLimites.Exception/CidadeSemLimites.Exception.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="ErrorMessagesResources\PostResource.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>PostResource.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="ErrorMessagesResources\PostResource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>PostResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
