--- a/src/CidadeSemLimites.Application/CidadeSemLimites.Application.csproj
+++ b/src/CidadeSemLimites.Application/CidadeSemLimites.Application.csproj
@@ -13,9 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="AutoMapper\" />
-    <Folder Include="Validators\" />
-    <Folder Include="UseCases\" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
