Adicionando sistema de feedbacks

--- a/src/CidadeSemlimites.Api/appsettings.Development.json
+++ b/src/CidadeSemlimites.Api/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Connection": "Server=BANDEIRA, 1434;Database=BD046730;User=RA046730;Password=046730;TrustServerCertificate=True"
+    "Connection": "Server=bandeira, 1434;Database=BD046730;User=RA046730;Password=046730;TrustServerCertificate=True"
   }
 }
